# clip_keeper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.1.md  build.rs
assets/: tray-icon.rgba
src/: main.rs
src/app/: mod.rs
src/app/contexts/: app_context.rs  composition_root.rs  mod.rs  service_context.rs  service_runtime.rs  state_context.rs
src/app/services/: clipboard_service.rs  detectors.rs  hotkey_logger.rs  mod.rs  monitor_runtime.rs  settings_service.rs  tray_runtime.rs  tray_service.rs  ui_gateway.rs
src/app/states/: app_state.rs  mod.rs  settings_state.rs
ui/: app-window.slint
