[package]
name = "ClipKeeper"
version = "0.9.3"
edition = "2021"

[dependencies]
slint = { version = "1.14.1", features = ["unstable-winit-030"] }
arboard = "3.6.1"
tray-icon = "0.21.2"
rdev = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
slint-build = "1.14.1"
winresource = "0.1"
